<resources>
    <string name="app_name">UI Components</string>
    <string name="msg_desc">App Icon</string>
    <string name="title_fuzz">FRUZZ</string>
    <string name="title_digital">digital</string>
    <string name="title_btn_login">Login</string>
    <string name="title_btn_register">Register</string>
    <string name="action_continue_as_guest">Continue as a guest</string>
    <string name="title_welcome_text">Welcome back! Glad to see you, Again!</string>
    <string name="text_email">Enter your email</string>
    <string name="text_password">Enter your Password</string>
    <string name="action_forget_password">forget password?</string>
    <string name="msg_facebook_login">facebook login</string>
    <string name="msg_google_login">Google Login</string>
    <string name="msg_apple_login">Apple Login</string>
    <string name="text_options">Or Login with</string>
    <string name="msg_ask">Don’t have an account?</string>
    <string name="action_register_now">Register Now</string>
    <string name="text_username">Username</string>
    <string name="text_confirm_password">Enter Confirm Password</string>
    <string name="tv_email">Email</string>
    <string name="text_hint_password">Password</string>
    <string name="text_conform_password">Conform Password</string>
    <string name="action_login_now">Login Now</string>
    <string name="text_remember_password">Remember Password?</string>
    <string name="text_register_with">Or Register with</string>
    <string name="title_image_button">Image Button with States</string>
    <string name="txt_flutter">Flutter</string>
    <string name="txt_react_native">React Native</string>
    <string name="txt_ios">iOS</string>
    <string name="txt_android">Android</string>
    <string name="txt_category">Selected Category</string>
    <string name="txt_food">Food</string>
    <string name="txt_stationary">Stationary</string>
    <string name="txt_electronics">Electronics</string>
    <string name="txt_clothes">Clothes</string>
    <string name="txt_choose_category">Choose Category</string>
    <string name="text_choose_radio">Select your Stack?</string>
    <string name="txt_clear">CLEAR</string>
    <string name="txt_show">Show</string>
    <string name="txt_switch_mode">OFF/ON</string>
    <string name="txt_spinner">Spinner</string>
    <string name="txt_create">Create</string>
    <string name="text_default_time">01:30 PM</string>
    <string name="txt_task_name">Task Name</string>
    <string name="txt_default_date">Friday 12, 2024</string>
    <string name="title_meeting">New Meeting</string>
    <string name="txt_meeting_time">Meeting Time</string>
    <string name="txt_meeting_date">Meeting Date</string>
    <string name="txt_custom_alert_dialog">Custom Alert Dialog</string>
    <string name="txt_alert_dialog">Alert Dialog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_enter_username">Enter username</string>
    <string name="title_html_text">Html Text</string>
    <string name="txt_empty" />
    <string name="txt_start">Start</string>
    <string name="txt_enter_url">Enter URL</string>
    <string name="title_google_search">Google Search</string>
    <string name="txt_enter_phone">Enter phone</string>
    <string name="txt_dial_call">Dial Call</string>
    <string name="txt_send_mail">Send Mail</string>
    <string name="txt_text_message">Enter Text Message</string>
    <string name="txt_send_text_message">Send Text Message</string>
    <string name="txt_plain_text">Enter Plain Text</string>
    <string name="txt_send_plain">Send Plain Text</string>
    <string name="title_custom_toast">it is custom toast</string>
    <string name="button_create_directory">Create Directory</string>
    <string name="txt_et_directory_name">Enter Directory Name</string>
    <string name="title_external_storage">External Storage</string>
    <string name="et_information">Enter information</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="text_product_name">Men\'s Regular Fit Graphic T-Shirt</string>
    <string name="text_product_price">Rs.499</string>
    <string name="txt_btn_gridlayout">GridLayout</string>
    <string name="txt_btn_linearlayout">LinearLayout</string>
    <string name="txt_desc">JAVA is a programming language which is used in Android App Development. It is class based and object oriented programming whose syntax is influenced by C++. The primary goals of JAVA is to be simple, object-oriented, robust, secure and high level.</string>
    <string name="txt_btn_custom_snackbar">Custom Snackbar</string>
    <string name="txt_btn_action_call_snackbar">Action Call Snackbar</string>
    <string name="txt_btn_default_snackbar">Default Snackbar</string>
    <string name="text_ob_1">Your go-to eCommerce app for seamless shopping, personalized recommendations, and secure transactions</string>
    <string name="text_ob_2">Browse, select, and breeze through checkout with ease.</string>
    <string name="text_ob_3">Streamlined doorstep delivery service, Effortless delivery to your door, Simplified doorstep delivery.</string>
    <string name="text_ob_title_1">Explore many products</string>
    <string name="text_ob_title_2">Choose and Checkout</string>
    <string name="text_ob_title_3">Get it delivered</string>
    <string name="txt_splashscreen">SplashScreen</string>
    <string name="txt_menu_setting">setting</string>
    <string name="txt_menu_share">Share</string>
    <string name="txt_menu_search">Search</string>
    <string name="title_desc">Fill out few below details to\nsetup your profile</string>
    <string name="txt_et_confirm_password">Confirm Password</string>
    <string name="txt_term_condition">Accept all terms and conditions</string>
    <string name="txt_et_password">Password</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_et_username">Username</string>
    <string name="txt_welcome_to_hireone">Welcome to HireOne</string>
</resources>