<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/txt_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_settings"
        android:title="@string/txt_menu_share"
        app:showAsAction="always"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"/>

    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/ic_share"
        android:title="@string/txt_menu_setting"
        app:showAsAction="never" />
</menu>