<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".home.SignUpActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_welcome_to_hireone"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView"
        app:layout_constraintEnd_toEndOf="@+id/materialTextView"
        app:layout_constraintStart_toStartOf="@+id/materialTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/title_desc"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/layout_username"
        app:layout_constraintEnd_toEndOf="@id/layout_username"
        app:layout_constraintStart_toStartOf="@id/layout_username" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_username"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_et_username"
        app:boxStrokeColor="@color/black"
        app:endIconMode="clear_text"
        android:layout_marginBottom="16dp"
        app:helperTextTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@id/layout_phone"
        app:layout_constraintEnd_toEndOf="@id/layout_phone"
        app:layout_constraintStart_toStartOf="@id/layout_phone"
        app:startIconDrawable="@drawable/ic_et_username"
        app:startIconTint="@color/purple">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
           />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_phone"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_phone"
        app:boxStrokeColor="@color/black"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:helperTextTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@id/layout_password"
        app:layout_constraintEnd_toEndOf="@id/layout_password"
        app:layout_constraintStart_toStartOf="@id/layout_password"
        app:startIconDrawable="@drawable/ic_et_call"
        app:startIconTint="@color/purple">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:maxLength="10"
             />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_et_password"
        app:boxStrokeColor="@color/black"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:helperTextTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@id/layout_confirm_password"
        app:layout_constraintEnd_toEndOf="@id/layout_confirm_password"
        app:layout_constraintStart_toStartOf="@id/layout_confirm_password"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_et_password"
        app:startIconTint="@color/purple">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:maxLength="8"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_confirm_password"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_et_confirm_password"
        app:boxStrokeColor="@color/black"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:helperTextTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@id/checkbox_terms_condition"
        app:layout_constraintEnd_toEndOf="@id/checkbox_terms_condition"
        app:layout_constraintStart_toStartOf="@id/checkbox_terms_condition"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_et_password"
        app:startIconTint="@color/purple">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:maxLength="8"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_terms_condition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_term_condition"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        app:layout_constraintEnd_toEndOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="@id/btn_register" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/black"
        android:padding="4dp"
        android:text="@string/title_btn_register"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/layout_end"
        app:layout_constraintEnd_toEndOf="@id/layout_end"
        app:layout_constraintStart_toStartOf="@id/layout_end" />


    <LinearLayout
        android:id="@+id/layout_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_remember_password"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_login_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/action_login_now"
            android:textColor="@color/purple"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>